--- a/contact.html
+++ b/contact.html
@@ -31,15 +31,19 @@
             <button type="submit">Send Message</button>
         </form>
         <div class="contact-info">
-            <p><link href="mailto:ainexus.innovation@gmail.com">Email: ainexus.innovation@gmail.com</p>
-            <p><link href="tel:+91 7598543868">Phone: +91 7598543868</p>
+            <p style="color: #ff0000;font-weight: bold;">Email:</p>
+            <a href="mailto:ainexus.innovation@gmail.com" style="color: #fff;text-decoration: none;"><p>ainexus.innovation@gmail.com</p></a>
+            <p style="color: #ff0000;font-weight: bold;">Phone:</p>
+            <a href="tel:+918220816956" style="color: #fff;text-decoration: none;"><p>+91 82208 16956</p></a>
+            <a href="tel:+917598543868" style="color: #fff;text-decoration: none;"><p>+91 75985 43868</p></a>
         </div>
     </section>
+    
     
     <footer>
         <p>&copy; 2024 AI NEXUS. All rights reserved.</p>
         <div class="social-media">
-            <a href="https://Instagram.com/ainexus" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/ainexus_innovative" target="_blank">Instagram</a>
             <a href="https://linkedin.com/company/ainexus" target="_blank">LinkedIn</a>
         </div>
     </footer>
