--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
             <h1>Welcome to AI NEXUS</h1>
             <p>Innovating the future with AI solutions</p>
-            <a href="#services" class="cta-button">Explore Our Services</a>
+            <a href="services.html" class="cta-button">Explore Our Services</a>
         </div>
     </section>
     
