--- a/services.html
+++ b/services.html
@@ -25,15 +25,30 @@
     <section id="services" class="services">
         <h2>Our Services</h2>
         <div class="service">
-            <h3>Service One</h3>
-            <p>Description of service one.</p>
-            <button class="interactive-demo">Interactive Demo</button>
+            <h3>AI Modeling</h3>
+            <p>AI model building involves designing algorithms to solve tasks using data. It includes data preprocessing, model training, and validation. The final model is deployed and monitored for real-world performance.</p>
+            <a href="solutions.html">
+            <button class="interactive-demo">Demo Projects</button>
+        </a>
         </div>
         <div class="service">
-            <h3>Service Two</h3>
-            <p>Description of service two.</p>
-            <button class="interactive-demo">Interactive Demo</button>
-        </div>
+            <h3>AR/VR Development</h3>
+            <p>AR and VR development creates immersive experiences by blending virtual elements with the real world or building virtual environments. It involves designing 3D models, interactions, and using devices like headsets. The application is tested, optimized, and deployed for user engagement.</p>
+            <a href="solutions.html">
+                <button class="interactive-demo">Demo Projects</button>
+            </a>        </div>
+        <div class="service">
+            <h3>Web Development</h3>
+            <p>Full-stack development involves building both the front-end and back-end of a web application. It includes designing user interfaces, setting up databases, and implementing server-side logic. The final application is tested, deployed, and maintained for seamless functionality.</p>
+            <a href="solutions.html">
+                <button class="interactive-demo">Demo Projects</button>
+            </a>        </div>
+        <div class="service">
+            <h3>IOT Solutions</h3>
+            <p>IoT projects connect devices to the internet for data exchange and control. They use sensors, actuators, and communication protocols like Wi-Fi or Bluetooth. Applications include smart homes, healthcare, and industrial automation.</p>
+            <a href="solutions.html">
+                <button class="interactive-demo">Demo Projects</button>
+            </a>            </div>
         <!-- Add more services here -->
     </section>
     
