--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
     <footer>
         <p>&copy; 2024 AI NEXUS. All rights reserved.</p>
         <div class="social-media">
-            <a href="https://twitter.com/ainexus" target="_blank">Twitter</a>
+           <a href="https://www.instagram.com/ainexus_innovative" target="_blank">Instagram</a>
             <a href="https://linkedin.com/company/ainexus" target="_blank">LinkedIn</a>
         </div>
     </footer>
