--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                     <img src="shyam.jpg" alt="Dickson Shyam Kumar A">
                     <div class="team-member-content">
                         <h3>Dickson Shyam Kumar A</h3>
-                    <p>AI Developer</p>
+                    <p>Designer</p>
                     </div>
                     
                 </div>
