--- a/about.html
+++ b/about.html
@@ -12,11 +12,7 @@
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="AI NEXUS Logo">
             </a>
-            <div class="hamburger-menu" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+            <button class="menu-toggle" id="menu-toggle">☰</button>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About Us</a></li>
@@ -76,7 +72,7 @@
                     <img src="shyam.jpg" alt="Dickson Shyam Kumar A">
                     <div class="team-member-content">
                         <h3>Dickson Shyam Kumar A</h3>
-                    <p>Designer</p>
+                    <p>AI Developer</p>
                     </div>
                     
                 </div>
@@ -122,7 +118,7 @@
         <p>&copy; 2024 AI NEXUS. All rights reserved.</p>
         <div class="social-media">
             <a href="https://www.instagram.com/ainexus_innovative" target="_blank">Instagram</a>
-            <a href="https://linkedin.com/company/ainexus" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/profile.php?id=61570360906954" target="_blank">Facebook</a>
         </div>
     </footer>
     
