--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="AI NEXUS Logo">
             </a>
+            <button class="menu-toggle" id="menu-toggle">☰</button>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -55,7 +56,7 @@
         <p>&copy; 2024 AI NEXUS. All rights reserved.</p>
         <div class="social-media">
             <a href="https://www.instagram.com/ainexus_innovative" target="_blank">Instagram</a>
-            <a href="https://linkedin.com/company/ainexus" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/profile.php?id=61570360906954" target="_blank">Facebook</a>
         </div>
     </footer>
     
